--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br />
             Venha me conhecer!
           </p>
-          <a href="about/">Me conheça</a>
+          <a href="pages/about/">Me conheça</a>
           </div>
           <img src="img/octopus.png" class="image" />
       </div>
